test/valid-data/type-typeof-object-property/main.ts
const FOO =  { bar: "foo" };

export type MyType = typeof FOO.bar;
